hphp/test/slow/parser/bad_yield.php.expectf
Fatal error: 'yield' is not allowed in constructors or magic methods in %s/test/slow/parser/bad_yield.php on line 5
